Fri Jun  4 15:38:18 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

        * DnC/ciao/Deployment_Core.idl

          Change the "Connection" IDL type by replacing the "string name"
          field with three more fields, i.e., "string instanceName",
          "string portName" and "CCMComponentPortKind kind". We feel the
          old one in DnC spec is not well defined and make the run-time
          thing harder.
          
        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:
        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          Finished all the functionality to handle connections and all
          other things required.

Fri Jun  4 15:32:50 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/tests/NodeApplicationTest/RoundTripEI.idl:
	  Removed this file.

	* DnC/tests/NodeApplicationTest/RoundTrip_exec.h:
	* DnC/tests/NodeApplicationTest/RoundTrip_exec.cpp:
	* DnC/tests/NodeApplicationTest/NodeAppTest_RoundTrip.idl:
	* DnC/tests/NodeApplicationTest/NodeAppTest.mpc:
	  Changed these files to get the get_all_facets test working.
	  Note: I have changed the component implementation to the new
	  executor mapping that Boris proposed. It's not a must in this
	  example but we can use it later as a tutorial for our users.

	* DnC/tests/NodeApplicationTest/run_test_ex.pl:
	* DnC/tests/NodeApplicationTest/NodeApp_test_client_ex.cpp:
	  Added these two files to test the get_all_facets function.

Fri Jun  4 15:02:15 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/DomainApplicationManager/DomainApplicationManager.mpc:
        * DnC/RepositoryManager/RepositoryManager.mpc:
        * DnC/RepositoryManager/RepositoryManager_Impl.cpp:
        * DnC/RepositoryManager/RepositoryManager_Impl.h:
        * DnC/RepositoryManager/Repository_Manager.cpp:

          Made changes so that RepositoryManager can dump out the
          PackageConfiguration elements.

Fri Jun  4 11:42:18 2004  Gan Deng  <dengg@dre.vanderbilt.edu>
